--- a/web-frontend/src/pages/aboutUs/aboutus.css
+++ b/web-frontend/src/pages/aboutUs/aboutus.css
@@ -1,6 +1,6 @@
 .mainAboutPage {
   font-family: Arial, Helvetica, sans-serif;
-  margin-left: 2%;
+  margin-left: 0%;
   box-sizing: border-box;
 }
 
@@ -30,7 +30,8 @@
 }
 
 .platformlogoAlign {
-  margin-left: 25%;
+  margin-left: 20%;
+  margin-top: 15%;
 }
 
 .twitterAnimation:hover {
@@ -50,16 +51,17 @@
 
 .columnAbout {
   float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
+  width: 26.3%;
   padding: 0 8px;
+  padding-left: 5%;
   margin-bottom: 5%;
+  margin-left: 1%;
 }
 
 .cardAbout {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid var(--primary-border-grey);
+  border-radius: 10px;
   margin: 8px;
-  width: 90%;
 }
 
 /* .cardAbout:hover {
@@ -76,6 +78,7 @@
 
 .containerAbout {
   padding: 0 16px;
+  margin-top: 15%;
 }
 
 .containerAbout::after,
@@ -120,7 +123,7 @@
   .columnAbout {
     width: 80%;
     display: block;
-    margin-left: 15%;
+    margin-left: 18%;
   }
   .cardAbout {
     width: 80%;
