--- a/web-frontend/src/pages/aboutUs/aboutus.css
+++ b/web-frontend/src/pages/aboutUs/aboutus.css
@@ -23,6 +23,7 @@
 }
 .bodySplitAbout {
   margin-left: 4%;
+  margin-top: 10%;
 }
 
 .aboutDescrip {
@@ -64,16 +65,39 @@
   margin: 8px;
 }
 
-/* .cardAbout:hover {
-  cursor: grab;
-  transform: scale(1.1);
-} */
+.labelAbout {
+  display: inline-block;
+  font-weight: 600;
+  font-size: 2rem;
+  margin-bottom: 0.8rem;
+  color: #ff615a;
+  margin-left: 10%;
+  margin-top: 5%;
+}
+
+.aboutDescripHeading {
+  margin-left: 10%;
+  margin-top: 1%;
+  font-size: 5.2rem;
+  opacity: 1;
+  color: #482890;
+}
+
+.aboutSubDescrip {
+  color: var(--primary-black);
+  font-size: 2.2rem;
+  text-align: justify;
+  width: 72%;
+}
 
 .about-sectionAbout {
+  margin-top: -1%;
   padding: 50px;
+  /* padding-bottom: 10%; */
   text-align: center;
-  background-color: #474e5d;
-  color: white;
+  background-color: #9d9dff;
+  width: 40%;
+  color: var(--primary-black);
 }
 
 .containerAbout {
@@ -90,6 +114,12 @@
 
 .titleAbout {
   color: grey;
+}
+
+.teamDescription {
+  width: 100%;
+  height: 50%;
+  color: black;
 }
 
 .buttonAbout {
