--- a/web-frontend/src/pages/aboutUs/aboutus.css
+++ b/web-frontend/src/pages/aboutUs/aboutus.css
@@ -106,7 +106,8 @@
 }
 
 .aboutSubDescrip {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  font-family: Trebuchet MS;
   color: black;
   font-weight: 500;
   width: 60%;
