--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -142,7 +142,7 @@ body * {
   --logo-banner-subtext: #a097fa;
 
   /*welcome text */
-  --welcome-text-top: #bbbbbb;
+  --welcome-text-top: #cecece;
   --welcome-text-bottom: #ffffff;
 
   /*index bg annimation */
