--- a/web-frontend/src/pages/index/homepage.css
+++ b/web-frontend/src/pages/index/homepage.css
@@ -83,6 +83,7 @@
   }
 }
 
+/* start button */
 .homepage-start-button {
   padding-top: 3%;
   position: absolute;
@@ -92,7 +93,24 @@
   text-align: center;
 }
 
-/* start button */
+@media only screen and (max-width: 700px) {
+  .homepage-start-button {
+    padding-left: 5vw;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .homepage-start-button {
+    padding-left: 5vw;
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+  .homepage-start-button {
+    padding-left: 3vw;
+  }
+}
+
 @keyframes startbtn-effect {
   80% {
     opacity: 0;
