--- a/web-frontend/src/pages/index/homepage.css
+++ b/web-frontend/src/pages/index/homepage.css
@@ -194,6 +194,12 @@
 .circle-shade5 {
   opacity: 1;
 }
+.home-login-btn-propic img {
+  /* width: 4.8rem; */
+  /* height: 2.4rem; */
+  border-radius: 50%;
+  transition: 200ms ease;
+}
 
 @keyframes ripple {
   0% {
