--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -86,6 +86,9 @@ body * {
 
   /*index bg annimation */
   --bg-annimation: #092e67;
+
+  /* 404 page */
+  --lighter-text: rgb(235, 235, 235);
 }
 :root[data-theme='dark'] {
   /*tested*/
@@ -147,4 +150,7 @@ body * {
 
   /*index bg annimation */
   --bg-annimation: #ffffff;
+
+  /* 404 page */
+  --lighter-text: rgb(37, 37, 37);
 }
