--- a/web-frontend/src/pages/pagenotfound/pagenotfound.css
+++ b/web-frontend/src/pages/pagenotfound/pagenotfound.css
@@ -1,6 +1,6 @@
 #page-not-found {
   position: relative;
-  height: 110vh;
+  height: 100vh;
   font-family: sans-serif, 'Maven Pro';
 }
 
@@ -51,7 +51,7 @@
   font-size: 5em;
   color: var(--black);
   font-weight: 800em;
-  margin: 0px;
+  margin: 0 1%;
 }
 
 .page-not-found p {
@@ -66,7 +66,7 @@
 .page-not-found a {
   display: inline-block;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 1.5em;
   font-weight: 600;
   text-decoration: none;
   background: var(--primary-accent-light);
