--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -19,7 +19,7 @@
   transition: transform 200ms;
   font-size: 2rem;
   padding: 10px 0px;
-  height: 28px;
+  height: var(--nav-width);
   display: flex;
   align-items: center;
   /* margin-bottom: 20px; */
