AboutUs page updated for dark mode

--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -39,6 +39,7 @@ body * {
   --primary-border-grey: rgba(159, 159, 159, 1);
   --primary-border-grey: rgba(188, 188, 188, 1);
   --about-us-banner-background: #d1eeee;
+  --about-us-page-heading: #483d8b;
 
   /* Effect styles */
   /* --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12); */
@@ -140,7 +141,9 @@ body * {
   --primary-box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.12);
   --primary-border: 1px solid var(--primary-border-grey);
   --select-box-alt-color: rgba(39, 39, 39, 1);
-  --about-us-banner-background: #346b77
+  --about-us-banner-background: #346b77;
+  --about-us-page-heading: rgba(190, 190, 190, 1);
+
   /*logo banner */
   --logo-banner-maintext: #ffffff;
   --logo-banner-subtext: #a097fa;
