--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -127,7 +127,7 @@ body * {
   --success-light-text: #fff;
   --nav-background: #1c3c6d;
   --nav-border-sep: #21376c;
-  --nav-hover-link-color: #ffe08c;
+  --nav-hover-link-color: #fff1cc;
   --nav-link-hover-background: #95bcf721;
   --nav-link-hover-background: #a9c4ff0c;
   --nav-highlight: #0f2e5d;
