--- a/web-frontend/src/pages/aboutUs/aboutus.css
+++ b/web-frontend/src/pages/aboutUs/aboutus.css
@@ -138,7 +138,7 @@
 
 .titleAbout {
   color: grey;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   color: var(--fancy-heading-color);
 }
 
@@ -150,6 +150,10 @@
   width: 100%;
   height: 50%;
   color: black;
+}
+
+.emailColor {
+  color: var(--link-blue);
 }
 
 .buttonAbout {
