--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -145,7 +145,7 @@ body * {
   --select-box-alt-color: rgba(39, 39, 39, 1);
   --about-us-banner-background: #346b77;
   --about-us-page-heading: rgb(193 208 230);
-  --bargraph-background: #26466d;
+  --bargraph-background: #00688b;
   --bargraph-progress-load: #4f94cd;
   /*logo banner */
   --logo-banner-maintext: #ffffff;
