--- a/web-frontend/src/pages/aboutUs/aboutus.css
+++ b/web-frontend/src/pages/aboutUs/aboutus.css
@@ -34,6 +34,10 @@
   margin-top: 15%;
 }
 
+.rashadImgAlign {
+  border-radius: 50%;
+}
+
 .platformlogoAlign img {
   width: 25% !important;
   height: 25% !important;
