--- a/web-frontend/src/pages/uras/uras.css
+++ b/web-frontend/src/pages/uras/uras.css
@@ -1,3 +1,5 @@
+/* styles for uras */
+
 .heading-testing {
   display: flex;
   justify-content: center;
@@ -9,7 +11,6 @@
 }
 .testing {
   width: 600px;
-  /* padding: 80px; */
   margin: auto;
   margin-top: 10%;
   border: 1px solid var(--primary-border-grey);
